<resources>
    <string name="app_name">INDER2020</string>
    <string name="Mail">E-Mail</string>
    <string name="Password">Password</string>
    <string name="login">Login</string>
    <string name="Registro">Registrarse</string>
    <string name="user_name">Nombre(s) completos*</string>
    <string name="user_lname">Apellido(s) Completos*</string>
    <string name="user_email">E-mail*</string>
    <string name="user_phon">Telefono o Movil</string>
    <string name="user_pass">Password*</string>
    <string name="user_rpass">Repetir Password*</string>
    <string name="male">Masculino</string>
    <string name="female">Femenino</string>

    <string name="fechanaci">Fecha de Nacimiento*</string>

    <string name="municipio">Municipio*</string>
    <string name="save">Guardar</string>
    <string name="result">Chequear Datos</string>
    <string name="error_login">Algún Campo esta vacio</string>
    <string name="error_pass">El password no coincide</string>
    <string name="error_tama">El password debe ser minimo 6 digitos</string>
    <string name="error_correo">Correo Inconrrecto</string>
    <string name="error_passw">Contraseña Incorrecta</string>


    <string-array name="city_list">
        <item>Municipo</item>
        <item>Bello</item>
        <item>Envigado</item>
        <item>Itagui</item>
        <item>Medellin</item>
        <item>La Estrella</item>
    </string-array>


    <string-array name="cedula_list">
        <item>Seleccionar Documento</item>
        <item>Cédula de Ciudadanía</item>
        <item>Cédula de Extrangería</item>
        <item>Pasaporte</item>
        <item>Registro Civil</item>
        <item>Tarjeta de Identidad</item>
    </string-array>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="reserva3">Cancha de Tenis</string>
    <string name="reservas">Mis reservas</string>
    <string name="Bolera">Bolera</string>

    <string name="cancha">Cancha</string>
    <string name="estado">Estado</string>
    <string name="title_activity_reserva_detalle">ReservaDetalleActivity</string>
    <string name="fecha">Fecha</string>
    <string name="horario">Horario</string>
    <string name="reserva4">Campo de tiro</string>
    <string name="tipo_doc">Tipo de documento*</string>
    <string name="user_num_cedu">Número de identificación*</string>
    <string name="sexo">Sexo*</string>
    <string name="error_msg_login">There is no user record corresponding to this identifier. The user may have been deleted.</string>

    <string name="home_second">Home Second</string>
    <string name="hora_disp">Horario Disponible</string>
    <string name="hora">Hora Tales</string>
    <string name="continuar">Continuar</string>
    <string name="titulo_fecha">Fecha:</string>
    <string name="reserva_en_proceso">Reserva en Proceso...</string>
    <string name="titulo_esce">Escenario:</string>
    <string name="titulo_hora">Hora:</string>
    <string name="titul_nuevares">Nueva Reserva</string>
    <string name="name_misreserv">Mis Reservas</string>
    <string name="title_activity_maps">Map</string>
    <string name="participantes">Participantes</string>
    <string name="error_step2">Campos Repetidos</string>
    <string name="titul_parti">"Participante: "</string>
    <string name="cancelar_reserva">Cancelar Reserva</string>
    <string name="descripcion">Descripcion: </string>
    <string name="ubicacion">"Ubicacion: "</string>
    <string name="telefono">"Telefono: "</string>
    <string name="certificado">Descargar Certificado</string>


</resources>
