<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.projectV3S.NewReservaStep3">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewReservaStep3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            tools:context=".NewReservaStep3">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reserva_en_proceso"
                android:textSize="20sp"
                android:textColor="@color/darkcyan"
                />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_esce"
                android:textSize="20sp"
                android:textColor="@color/darkcyan"
                android:layout_marginTop="50dp"

                />

            <TextView

                android:id="@+id/tv_escen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_fecha"
                android:textSize="20sp"
                android:textColor="@color/darkcyan"


                />
            <TextView

                android:id="@+id/tv_fech"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_hora"
                android:textSize="20sp"
                android:textColor="@color/darkcyan"


                />
            <TextView

                android:id="@+id/tv_hor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView

                android:id="@+id/tv_titul1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titul_parti"
                android:textSize="20sp"
                android:textColor="@color/darkcyan"
                android:visibility="gone"/>

            <TextView

                android:id="@+id/tv_part1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_titul2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titul_parti"
                android:textSize="20sp"
                android:textColor="@color/darkcyan"
                android:visibility="gone"/>

            <TextView

                android:id="@+id/tv_part2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_titul3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titul_parti"
                android:textSize="20sp"
                android:textColor="@color/darkcyan"
                android:visibility="gone"/>

            <TextView

                android:id="@+id/tv_part3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_titul4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titul_parti"
                android:textSize="20sp"
                android:textColor="@color/darkcyan"
                android:visibility="gone"/>

            <TextView

                android:id="@+id/tv_part4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_titul5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titul_parti"
                android:textSize="20sp"
                android:textColor="@color/darkcyan"
                android:visibility="gone"/>

            <TextView

                android:id="@+id/tv_part5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_titul6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titul_parti"
                android:textSize="20sp"
                android:textColor="@color/darkcyan"
                android:visibility="gone"/>

            <TextView

                android:id="@+id/tv_part6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_titul7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titul_parti"
                android:textSize="20sp"
                android:textColor="@color/darkcyan"
                android:visibility="gone"/>

            <TextView

                android:id="@+id/tv_part7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_titul8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titul_parti"
                android:textSize="20sp"
                android:textColor="@color/darkcyan"
                android:visibility="gone"/>

            <TextView

                android:id="@+id/tv_part8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_titul9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titul_parti"
                android:textSize="20sp"
                android:textColor="@color/darkcyan"
                android:visibility="gone"/>

            <TextView

                android:id="@+id/tv_part9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_titul10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titul_parti"
                android:textSize="20sp"
                android:textColor="@color/darkcyan"
                android:visibility="gone"/>

            <TextView

                android:id="@+id/tv_part10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_titul11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titul_parti"
                android:textSize="20sp"
                android:textColor="@color/darkcyan"
                android:visibility="gone"/>

            <TextView

                android:id="@+id/tv_part11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_titul12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titul_parti"
                android:textSize="20sp"
                android:textColor="@color/darkcyan"
                android:visibility="gone"/>

            <TextView

                android:id="@+id/tv_part12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_titul13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titul_parti"
                android:textSize="20sp"
                android:textColor="@color/darkcyan"
                android:visibility="gone"/>

            <TextView

                android:id="@+id/tv_part13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_titul14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titul_parti"
                android:textSize="20sp"
                android:textColor="@color/darkcyan"
                android:visibility="gone"/>

            <TextView

                android:id="@+id/tv_part14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_titul15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titul_parti"
                android:textSize="20sp"
                android:textColor="@color/darkcyan"
                android:visibility="gone"/>

            <TextView

                android:id="@+id/tv_part15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_titul16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titul_parti"
                android:textSize="20sp"
                android:textColor="@color/darkcyan"
                android:visibility="gone"/>

            <TextView

                android:id="@+id/tv_part16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:visibility="gone"/>
            <Button
                android:id="@+id/bt_conti_to_main"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_dis"
                android:elevation="20dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/continuar"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="16dp"
                />




        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>
